--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
           <th>logan-hagmeier</th>>
         </tr> 
     </table>
-    <img src="./IMG_2379.JPG" alt="Professional Photo of me" />
+    <img src="./images/IMG_2379.JPG" alt="Professional Photo of me" />
     </body>
     
     
