--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <b></b>
 
   <body>
-    <img src="./IMG_2381 2.JPG" alt="Professional Photo of me" />
+    <img src="./images/IMG_2381 2.JPG" alt="Professional Photo of me" />
     <p>
         I as born and raised in Cedar Rapids Iowa and currently 
         am a student at the University of Iowa. Upon graduation this upcoming fall 
@@ -55,7 +55,9 @@
               <td>16</td> 
             </tr>
           </table>
-        <h3><a href="contact.html"> Contact Me</a> </h3>
+
+
+        <h3><a href="./contact.html"> Contact Me</a> </h3>
 
     </body>
 </html>
