--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <b></b>
 
   <body>
-    <img class="responsive-main" src="./images/IMG_2381.JPG" alt="Professional Photo of me" />
+    <img class="responsive-main" src="./images/IMG_2381.JPG" />
+
     <p>
         I as born and raised in Cedar Rapids Iowa and currently 
         am a student at the University of Iowa. Upon graduation this upcoming fall 
