--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
   
 <b></b>
-
-  <body>
-    <img class="responsive-main" src="./images/IMG_2381.JPG" />
-
+<img class="responsive-main" src="./images/IMG_2381.JPG"  style="float:left;" />
+  <body style="float:left;">
     <p>
         I as born and raised in Cedar Rapids Iowa and currently 
         am a student at the University of Iowa. Upon graduation this upcoming fall 
