--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   
 <b></b>
-<img class="responsive-main" src="./images/IMG_2381.JPG"  style="float:left;" />
+<img class="responsive-main" src="./images/IMG_2381.JPG"  style="float:left; padding-left:15px;" />
   <body style="float:left;">
     <p>
         I as born and raised in Cedar Rapids Iowa and currently 
@@ -54,7 +54,6 @@
               <td>16</td> 
             </tr>
           </table>
-
 
         <h3><a href="./contact.html"> Contact Me</a> </h3>
 
