--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
   
 <b></b>
-<img class="responsive-main" src="./images/IMG_2381.JPG"  style="float:left; padding-left:15px;" />
+<img class="responsive-main" src="./images/IMG_2381.JPG"  style="float:left; margin:10px;" />
   <body style="float:left;">
     <p>
         I as born and raised in Cedar Rapids Iowa and currently 
